@@ -128,12 +128,12 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 5.3.0-alpha06
-@set doc-edition 5.3.0-alpha06
+@set nco-edition 5.3.0-beta01
+@set doc-edition 5.3.0-beta01
 @set copyright-years 1995--2024
 @set update-year 2024
-@set update-date 21 November 2024
-@set update-month November 2024
+@set update-date 20 December 2024
+@set update-month December 2024
 
 @settitle @acronym{NCO} @value{nco-edition} User Guide
 
