@@ -1,3 +1,13 @@
+2024-12-20  Charlie Zender  <zender@uci.edu>
+
+	* NCO 5.3.0-beta01 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.3.0-beta01: Blagden Alley';git push
+	git tag -a 5.3.0-beta01 -m 'ncclimo: tms area_wgt, omit -v; ncks: S1D refactor, lut_out, frc_column, frc_landunit, snw_ocn, pft->PFT, clmv4; ncrcat: fix REC_APN wrn';git push --tags
+
+	* Resuscitate Acme1 builds by emulating Andes methods
+
+	* Resuscitate Chrysalis builds by emulating Andes methods
+
 2024-12-18  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.3.0-alpha06 release procedure:
